--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@
 
 :root {
     --primary-color:#fd951f;
-    --secondary-color:#1fd4fd;
+    --secondary-color:#1f83fd;
 }
 
 
@@ -55,6 +55,25 @@ body{
 
 .button:hover{
     background-color: #d7780b;
+}
+
+.button.edit{
+    background-color:var(--secondary-color);
+}
+
+
+.button.delete{
+    background-color: lightgray;
+}
+
+
+.button.edit:hover{
+    background-color:#065ac1;
+}
+
+
+.button.delete:hover{
+    background-color: rgb(223, 62, 62);
 }
 
  /* ===== HEADER ====  */
@@ -213,6 +232,103 @@ header div.container a {
 
     }
 
+
+    form .item span{
+        padding: 8px 16px;
+        background-color: var(--primary-color);
+        border-radius:16px ;
+        color: white;
+        margin-right: 4px;
+        margin-top: 8px;
+        display: inline-block;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 12px;
+    }
+
     form .fields{
         margin-bottom: 64px;
     }
+
+
+
+    /* FROTOS UPLOAD */
+
+    form .item #photos-upload{
+        position: relative;
+        display: block;
+        overflow: hidden;
+        width: 200px;
+    }
+
+
+    form .item #photos-upload p{
+        padding: 8px 18px;
+        border-radius: 4px;
+        box-shadow: 0 2px 2px -6px #333;
+        background-color: var(--secondary-color);
+        color: white;
+        width: 100%;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 14px;
+    }
+
+    form .item #photos-input{
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        overflow: hidden;
+        width:100%;        
+        height: 100%;
+        cursor: pointer;
+        opacity: 0;
+    }
+
+
+    form .item #photos-preview{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 8px;
+        width: 100%;
+        margin: 8px 0;
+    }
+
+    form .item #photos-preview img{
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+    }
+
+    #photos-preview .photo{
+        position: relative;
+    }
+
+    #photos-preview .photo i {
+        position: absolute;
+        top:0;
+        left: 0;
+
+        background: rgba(255, 255, 255, 0.8);
+
+        color: red;
+
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        cursor: pointer;
+        font-size: 500%;
+
+        transition: opacity 200ms;
+
+        opacity: 0;
+    }
+
+    #photos-preview .photo:hover i{
+        opacity: 1;
+    } 
