--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -9,8 +9,8 @@
                 {%endfor%}
             </select>
 
-     </div>
-</div>
+        </div>
+    </div>
 
     <div class="item">
         <div>Titulo:</div>
@@ -22,10 +22,21 @@
     <div class="item">
         <div>Descrição:</div>
         <div>
-            <textarea name="description">
-                {{product.name}}
-            </textarea>
+            <textarea name="description">{{product.name}}</textarea>
         </div>
+    </div>
+
+    <div class="item">
+        <div>Fotos:</div>
+        <div>
+            <div id="photos-upload">
+                <input id="photos-input" type="file" name="photos" multiple="multiple" accept="image/*" onChange="PhotosUpload.handleFileInput(event)">
+                <p>Selecioe ate 6 Fotos</p>
+            </div>
+            <div id="photos-preview"></div>
+
+        </div>
+
     </div>
 
     {# Campo de foto  #}
@@ -33,9 +44,8 @@
     <div class="item">
         <div>Valor:</div>
         <div>
-            <input type="text" name="price" placeholder="Preco do Produto" value="{{product.price}}">
+            <input type="text" name="price" placeholder="Preco do Produto" value="{{product.price}}" onkeydown="Mask.apply(this,'formatBRL')">
         </div>
-
         {% if product.old_price%}
             <input type="hidden" name="old_price" values="{{product.old_price}}">
             {%endif%}
@@ -48,7 +58,7 @@
             </div>
         </div>
 
-        {%if product.status%}
+        {%if (product.status == '1') or (product.status == '0')%}
             <div class="item">
                 <div>Disponivel</div>
                 <div>
