--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-
 
 :root {
     --primary-color:#fd951f;
@@ -200,6 +198,7 @@ header div.container a {
             margin-bottom: 8px;
     }
 
+    form .item .input input,
     form .item input[type="text"],
     form .item input[type="number"],
     form .item textarea,
@@ -605,5 +604,38 @@ header div.container a {
         font-weight: bold;
 
     }
+
+
+
+
+      /* ======== USER REGISTER =======  */
+
+
+
+      .user-register.container.form{
+          max-width: 500px;
+      }
+
+
+      .form input[name="email"],
+      .form input[name="password"],
+      .form input[name="passwordRepeat"],      
+      .form input[name="cpf_cnpj"],
+      .form input[name="cep"]{
+          max-width: 60%;
+      }
+
+
+
+
+      /*==========  VALIDATE ERRORS ===============*/
+      .input .error{
+          width: 50%;
+          background-color: #e74c3c;
+          padding: 4px;
+          border-radius: 4px;
+          font-size: 14px;
+          color: white;
+      }
 
 
