--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -22,11 +22,32 @@
                 </a>
             </li>
 
-            <li>
+            <li class="accounts">
                 <a href="/accounts">
                     <i class="material-icons">account_circle</i>
                     Minha Conta
                 </a>
+                {%if session.userId %}
+                <ul class="submenu">
+                    <li>
+                        <a href="/users">Minha Conta</a>
+                    </li>
+                    
+                     <li>
+                        <a href="/buying">Meus Pedidos</a>
+                    </li>
+
+                    <li>
+                        <a href="/selling">Minhas Vendas</a>
+                    </li>
+
+                     <li>
+                        <form action="/users/logout" method="POST">
+                            <button>Sair</button>
+                        </form>
+                    </li>
+                </ul>
+                {%endif%}
             </li>
         </ul>
     </nav>
