CHORE: Adicionado Pagina de Listagem de Anuncios

--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -34,12 +34,12 @@
                     </li>
                     
                      <li>
-                        <a href="/buying">Meus Pedidos</a>
+                        <a href="/users/ads">Meus Anuncios</a>
                     </li>
 
-                    <li>
+                    {# <li>
                         <a href="/selling">Minhas Vendas</a>
-                    </li>
+                    </li> #}
 
                      <li>
                         <form action="/users/logout" method="POST">
