--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -344,19 +344,10 @@ header div.container a {
 
     /*    PRODUCT VIEW   */
 
-    .product-single{
-        background-color: white;
+    .product-single .card-content{
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 24px;
-
-        padding: 32px 24px;
-        margin: 32px auto;
-
-        box-shadow: 2px 2px 2px 0px rgb(63, 63, 62);
-
-        border: 1px solid #efefef;
-        border-radius: 4px;
     }
 
     /* PRODUCT SINGLE GALLERY */
@@ -485,6 +476,7 @@ header div.container a {
 
           padding-top: 8px;
           border-top: 1px solid #eee;
+          margin-top: auto;
       }
 
 
@@ -576,7 +568,7 @@ header div.container a {
 
     .search-products .header h2{
         font-size: 26px;
-        text-transform: capitalize;
+        text-transform: uppercase;
         margin-bottom: 8px;
     }
 
@@ -607,14 +599,6 @@ header div.container a {
 
 
 
-
-      /* ======== USER REGISTER =======  */
-
-
-
-      .user-register.container.form{
-          max-width: 500px;
-      }
 
 
       .form input[name="email"],
