--- a/src/app/views/products/edit.njk
+++ b/src/app/views/products/edit.njk
@@ -1,8 +1,12 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-    <section class="container form">
+{%call card.render('Editar Produto', 'container form')%}    
+
+
 
         <form method="POST" action="/products?_method=PUT" enctype="multipart/form-data">
             <div class="header">
@@ -25,7 +29,7 @@
             <button class="button delete" type="submit">Deletar</button>
         </form>
 
-    </section>
+   {%endcall%}
 
     <script>
         const formDelete = document.querySelector("#form-delete")
