--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -1,8 +1,11 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-    <section class="product-single container">
+{%call card.render('', 'product-single container form')%}   
+    
         <div class="gallery">
             <div class="highlight">
                 {% if not product.files[0] %}
@@ -73,7 +76,7 @@
 
         </div>
     
-    </section>
+    {%endcall%}
     
 
 {% endblock content %}
