--- a/src/app/views/session/forgot-password.njk
+++ b/src/app/views/session/forgot-password.njk
@@ -1,14 +1,13 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-    <section class="password container form">
 
-        <form method="POST" action="/users/forgot-password" >
-            <div class="header">
-                <h3>Esqueceu a senha?</h3>
-            </div>
-
+{%call card.render('Esqueceu a senha?', 'password container form')%}
+  
+ <form method="POST" action="/users/forgot-password" >
             <div class="fields">
                 <div class="item">
                 <div>Email</div>
@@ -29,8 +28,8 @@
             <button class="button" type="submit">Recuperar Senha</button>
 
 
-        </form>
+    </form>
 
-    </section>
+    {%endcall%}
 
 {% endblock content %}
