--- a/src/app/views/session/login.njk
+++ b/src/app/views/session/login.njk
@@ -1,14 +1,14 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-    <section class="login container form">
 
-        <form method="POST" action="/users/login" >
-            <div class="header">
-                <h3>Entrar</h3>
-            </div>
+{%call card.render('Entrar', 'login container form')%}
 
+         <form method="POST" action="/users/login" >
+            
             <div class="fields">
                 {% include 'session/fields.njk' %}
             </div>
@@ -28,6 +28,6 @@
 
         </form>
 
-    </section>
+{%endcall%}
 
 {% endblock content %}
