--- a/src/app/views/user/index.njk
+++ b/src/app/views/user/index.njk
@@ -1,13 +1,15 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-    <section class="user-dashboard container form">
+
+{%call card.render('Detalhes', 'users-dashboard  container form')%}
+    
 
         <form method="POST" action="/users?_method=PUT" >
-            <div class="header">
-                <h3>Detalhes</h3>
-            </div>
+           
 
             <div class="fields">
                 {% include 'user/fields.njk' %}
@@ -24,7 +26,7 @@
             <button class="button delete" type="submit">Deletar</button>
         </form>
 
-    </section>
+   {%endcall%}
 
     <script>
         const formDelete = document.querySelector("#form-delete")
