--- a/src/app/views/user/register.njk
+++ b/src/app/views/user/register.njk
@@ -1,14 +1,15 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
 
-    <section class="user-register container form">
+
+{%call card.render('Registre-se', 'user-register container form')%}
+
 
         <form method="POST" action="/users/register" >
-            <div class="header">
-                <h3>Registre-se</h3>
-            </div>
-
+            
             <div class="fields">
                 {% include 'user/fields.njk' %}
             </div>
@@ -17,6 +18,6 @@
 
         </form>
 
-    </section>
+ {%endcall%}
 
 {% endblock content %}
