Chore: Inserindo pedido de compra

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -502,6 +502,16 @@ header div.container a {
        letter-spacing: .4px;
     }
 
+    .product-single .unavailable{
+        font-size: 14px;
+        color:#ccc;
+        font-weight: bold;
+
+        background-color: #eee;
+
+        padding: 8px 16px;
+    }
+
     /* ======  SHOP  ====== */
 
     .shop h2{
