--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -16,7 +16,7 @@
     <nav class="primary">
         <ul>
             <li>
-                <a href=" ads/create">
+                <a href=" /ads/create">
                     <i class="material-icons">add</i>
                     Novo Anúncio
                 </a>
@@ -47,8 +47,11 @@
                         </form>
                     </li>
                 </ul>
+                
                 {%endif%}
             </li>
+
+            
         </ul>
     </nav>
 
