--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="/styles/messages.css">
 <link rel="stylesheet" href="/styles/menu-accounts.css">
 <link rel="stylesheet" href="/styles/session.css">
+<link rel="stylesheet" href="/styles/orders.css">
 
 
 
