--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -58,16 +58,24 @@
 
                 </div>
                 
+                {% if(session.userId) and (product.user_id == session.userId) %}
+                    <p class="unavailable">Vocé é o vendedor</p>
+                {%else%}
 
-                <div class="buy">
-                    {% if product.status == 0 %}
-                        <p class="unavaliable">Indisponivel</p>
-                     {%elseif product.quantity == 0 %}
-                        <p class="unavaliable">Fora de Estoque</p>  
-                     {%else%}    
-                        <button class="button">Comprar</button>
-                     {%endif%}   
-                </div>
+                    <div class="buy">
+                        {% if product.status == 0 %}
+                            <p class="unavaliable">Indisponivel</p>
+                        {%elseif product.quantity == 0 %}
+                            <p class="unavaliable">Fora de Estoque</p>  
+                        {%else%}   
+                            <form action="/users/orders" method="POST">
+                                <input type="hidden" name="id" value="{{product.id}}">
+                                <button class="button">Comprar</button>
+                            </form> 
+                        {%endif%}   
+                    </div>
+
+                {%endif%} 
 
             </div>
 
